[package]
name = "nanodb"
version = "0.4.4"
keywords = ["database", "storage", "embedded", "json"]
categories = ["database", "database-implementations", "data-structures"]
description = "A simple, embedded, JSON-based database"
readme = "README.md"
repository = "https://github.com/2bonahill/nanodb"
license = "MIT"
license-file = "LICENSE"
authors = ["2bonahill"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tempfile = "3.10.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["sync", "fs"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
